log/build_2026-01-16_21-17-55/qt_image_text_transfer/stdout.log
[1/6] Automatic MOC and UIC for target qt_image_text_transfer
[2/5] Building CXX object CMakeFiles/qt_image_text_transfer.dir/src/client_window.cpp.o
[3/5] Building CXX object CMakeFiles/qt_image_text_transfer.dir/src/server_window.cpp.o
FAILED: CMakeFiles/qt_image_text_transfer.dir/src/server_window.cpp.o 
/usr/bin/c++ -DDEFAULT_RMW_IMPLEMENTATION=rmw_fastrtps_cpp -DQT_CORE_LIB -DQT_GUI_LIB -DQT_NO_DEBUG -DQT_WIDGETS_LIB -DRCUTILS_ENABLE_FAULT_INJECTION -I/data/build/qt_image_text_transfer/qt_image_text_transfer_autogen/include -I/data/qt_image_text_transfer/include -isystem /usr/include/x86_64-linux-gnu/qt5 -isystem /usr/include/x86_64-linux-gnu/qt5/QtWidgets -isystem /usr/include/x86_64-linux-gnu/qt5/QtGui -isystem /usr/include/x86_64-linux-gnu/qt5/QtCore -isystem /usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++ -isystem /opt/ros/humble/include/rclcpp -isystem /opt/ros/humble/include/sensor_msgs -isystem /opt/ros/humble/include/std_msgs -isystem /opt/ros/humble/include/cv_bridge -isystem /usr/include/opencv4 -isystem /opt/ros/humble/include/ament_index_cpp -isystem /opt/ros/humble/include/libstatistics_collector -isystem /opt/ros/humble/include/builtin_interfaces -isystem /opt/ros/humble/include/rosidl_runtime_c -isystem /opt/ros/humble/include/rcutils -isystem /opt/ros/humble/include/rosidl_typesupport_interface -isystem /opt/ros/humble/include/fastcdr -isystem /opt/ros/humble/include/rosidl_runtime_cpp -isystem /opt/ros/humble/include/rosidl_typesupport_fastrtps_cpp -isystem /opt/ros/humble/include/rmw -isystem /opt/ros/humble/include/rosidl_typesupport_fastrtps_c -isystem /opt/ros/humble/include/rosidl_typesupport_introspection_c -isystem /opt/ros/humble/include/rosidl_typesupport_introspection_cpp -isystem /opt/ros/humble/include/rcl -isystem /opt/ros/humble/include/rcl_interfaces -isystem /opt/ros/humble/include/rcl_logging_interface -isystem /opt/ros/humble/include/rcl_yaml_param_parser -isystem /opt/ros/humble/include/libyaml_vendor -isystem /opt/ros/humble/include/tracetools -isystem /opt/ros/humble/include/rcpputils -isystem /opt/ros/humble/include/statistics_msgs -isystem /opt/ros/humble/include/rosgraph_msgs -isystem /opt/ros/humble/include/rosidl_typesupport_cpp -isystem /opt/ros/humble/include/rosidl_typesupport_c -isystem /opt/ros/humble/include/geometry_msgs -Wall -Wextra -Wpedantic -fPIC -MD -MT CMakeFiles/qt_image_text_transfer.dir/src/server_window.cpp.o -MF CMakeFiles/qt_image_text_transfer.dir/src/server_window.cpp.o.d -o CMakeFiles/qt_image_text_transfer.dir/src/server_window.cpp.o -c /data/qt_image_text_transfer/src/server_window.cpp
/data/qt_image_text_transfer/src/server_window.cpp: In member function ‘bool qt_image_text_transfer::ServerWindow::openRTSPStream(const QString&)’:
/data/qt_image_text_transfer/src/server_window.cpp:186:14: error: ‘cv::utils::logging’ has not been declared
  186 |   cv::utils::logging::setLogLevel(cv::utils::logging::LOG_LEVEL_WARNING);
      |              ^~~~~~~
/data/qt_image_text_transfer/src/server_window.cpp:186:46: error: ‘cv::utils::logging’ has not been declared
  186 |   cv::utils::logging::setLogLevel(cv::utils::logging::LOG_LEVEL_WARNING);
      |                                              ^~~~~~~
/data/qt_image_text_transfer/src/server_window.cpp: In member function ‘void qt_image_text_transfer::ServerWindow::onSendText()’:
/data/qt_image_text_transfer/src/server_window.cpp:243:34: error: incomplete type ‘QDateTime’ used in nested name specifier
  243 |   QString timestamp = QDateTime::currentDateTime().toString(QStringLiteral("hh:mm:ss"));
      |                                  ^~~~~~~~~~~~~~~
[4/5] Building CXX object CMakeFiles/qt_image_text_transfer.dir/src/main.cpp.o
ninja: build stopped: subcommand failed.
